폴더 열 때마다 git fetch 과 git pull 실행

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,9 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Git Pull",
+			"label": "Git Fetch & Pull",
 			"type": "shell",
-			"command": "git pull",
+			"command": "git fetch & git pull",
 			"runOptions": { "runOn": "folderOpen" }
 		}
 	]
